@@ -31,6 +31,7 @@ Data compatible - Yes, except:
   - Removed time zones Asia/Riyadh87, Asia/Riyadh88 and Asia/Riyadh89.
    These should not have been included in the 1.0 release, and do not represent
    genuine time zones. It is unlikely that you used them.
+   If you do want to use them, please contact joda-interest@lists.sourceforge.net
 
 
 Warnings since 1.0
@@ -130,8 +131,9 @@ Enhancements since 1.0
   Added factory to create a Period from two ReadablePartials using an
   alternative, field-based, calculation
 
-- DateTimeUtils.isContiguous(ReadablePartial)
-  New method to test if a partial is contiguous (see the method for the definition)
+- DateTimeUtils
+  Added isContiguous(ReadablePartial) to test if a partial is contiguous
+  (see the method for the definition)
 
 - PeriodType
   Added factory method forFields() to allow a PeriodType to be obtained
@@ -150,6 +152,11 @@ Enhancements since 1.0
 
 - Interval
   Added overlap method that returns the actual overlap between two intervals.
+  Added gap method that returns the gap between two intervals.
+  Added abuts method that returns true if two intervals abut.
+
+- DateTimeUtils
+  Added getReadableInterval(ReadableInterval) method to handle null intervals
 
 - IllegalFieldValueException
   Added new exception subclass of IllegalArgumentException to capture more
